--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -2,13 +2,12 @@
     <aside class="col-sm-4">
         <div class="card">
             <div class="card-header">
-                <h3 class="crd-title"><%= @user.name %></h3>
+                <h3 class="card-title"><%= @user.name %></h3>
             </div>
             <div class="card-body">
                 <img class="rounded img-fluid" src="<%= gravatar_url(@user, {size: 500}) %>" alt="">
             </div>
         </div>
-        <%= render 'relationships/follow_button', user: @user %>
     </aside>
     <div class="col-sm-8">
         <ul class="nav nav-tabs nav-justified mb-3">
@@ -17,6 +16,6 @@
             <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers <span class="badge bg-secondary"><%= @count_followers %></span></a></li>
             <li class="nav-item"><a href="<%= likes_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(likes_user_path(@user)) %>">Favorites <span class="badge bg-secondary"><%= @count_likes %></span></a></li>
         </ul>
-        <%= render 'users', users: @followings %>
+        <%= render 'microposts/microposts', microposts: @likes %>
     </div>
 </div>
